force-app/main/default/objects/ACBalance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>A/C BAL</relationshipLabel>
    <relationshipName>ACBalance</relationshipName>
    <type>Lookup</type>
</CustomField>