force-app/main/default/objects/ACBalance__c/fields/BankCashAccountID__c.field-meta.xml
<CustomField>
    <fullName>BankCashAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK/CASH ACCOUNT ID</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>A/C BAL</relationshipLabel>
    <relationshipName>BankCashACID</relationshipName>
    <type>Lookup</type>
</CustomField>