force-app/main/default/objects/ACBalance__c/fields/ClosingBalanceUSDCredit__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceUSDCredit__c</fullName>
    <label>CLOSING BALANCE-USD CREDIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>