force-app/main/default/objects/ACBalance__c/fields/ClosingBalanceUSDDebit__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceUSDDebit__c</fullName>
    <label>CLOSING BALANCE-USD DEBIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>