force-app/main/default/objects/ACBalance__c/fields/DebitCreditDecision__c.field-meta.xml
<CustomField>
    <fullName>DebitCreditDecision__c</fullName>
    <label>DEBIT/CREDIT DECISION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>