force-app/main/default/objects/ACBalance__c/fields/DebitCreditDecisionUSD__c.field-meta.xml
<CustomField>
    <fullName>DebitCreditDecisionUSD__c</fullName>
    <label>DEBIT/CREDIT DECISION-USD CURRENCY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>