force-app/main/default/objects/ACBalance__c/fields/EmplyoeeFullName__c.field-meta.xml
<CustomField>
    <fullName>EmplyoeeFullName__c</fullName>
    <formula>EmployeeID__r.Full_Name__c</formula>
    <label>EMPLOYEE FULL NAME</label>
    <type>Text</type>
</CustomField>