force-app/main/default/objects/ACBalance__c/fields/InsurancePaymentType__c.field-meta.xml
<CustomField>
    <fullName>InsurancePaymentType__c</fullName>
    <label>INSURANCE PAYMENT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InsurancePaymentType</valueSetName>
    </valueSet>
</CustomField>