force-app/main/default/objects/ACBalance__c/fields/mLocalAmountDebitCreditDecision__c.field-meta.xml
<CustomField>
    <fullName>mLocalAmountDebitCreditDecision__c</fullName>
    <formula>OpeningBalanceLocalDebit__c - OpeningBalanceLocalCredit__c +  TransactionBalanceLocalDebit__c -  TransactionBalanceLocalCredit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mLocalAmountDebitCreditDecision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>