force-app/main/default/objects/ACBalance__c/fields/mUSDAmountDebitCreditDecision__c.field-meta.xml
<CustomField>
    <fullName>mUSDAmountDebitCreditDecision__c</fullName>
    <formula>OpeningBalanceUSDDebit__c - OpeningBalanceUSDCredit__c + TransactionBalanceUSDDebit__c - TransactionBalanceUSDCredit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mUSDAmountDebitCreditDecision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>