force-app/main/default/objects/ACBalance__c/fields/OpeningBalanceLocalDebit__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceLocalDebit__c</fullName>
    <label>OPENING BALANCE-LOCAL DEBIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>