force-app/main/default/objects/ACBalance__c/fields/OpeningBalanceUSDCredit__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceUSDCredit__c</fullName>
    <label>OPENING BALANCE-USD CREDIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>