force-app/main/default/objects/ACBalance__c/fields/OpeningBalanceUSDDebit__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceUSDDebit__c</fullName>
    <label>OPENING BALANCE-USD DEBIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>