force-app/main/default/objects/ACBalance__c/fields/ParentAccountingCodeBalance__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountingCodeBalance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT ACCOUNTING CODE-BALANCE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>A/C BALANCE (CHILD ACCOUNTING CODE-BALANCE)</relationshipLabel>
    <relationshipName>ParentAccountingCodeBalance</relationshipName>
    <type>Lookup</type>
</CustomField>