force-app/main/default/objects/ACBalance__c/fields/PreviousACBalance__c.field-meta.xml
<CustomField>
    <fullName>PreviousACBalance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS A/C BALANCE ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ACBalance__c.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>$Source.RecordTypeId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>NEXT A/C BALANCE</relationshipLabel>
    <relationshipName>PreviousACBalance</relationshipName>
    <type>Lookup</type>
</CustomField>