force-app/main/default/objects/ACBalance__c/fields/RollupAmountOfTaxVATBuying__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfTaxVATBuying__c</fullName>
    <label>ROLLUP AMOUNT OF TAX-VAT BUYING</label>
    <summarizedField>VATACBalance__c.AmountOfBuyingVATACBal__c</summarizedField>
    <summaryForeignKey>VATACBalance__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>