force-app/main/default/objects/ACBalance__c/fields/RollupAmountOfTaxVATSelling__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfTaxVATSelling__c</fullName>
    <label>ROLLUP AMOUNT OF TAX-VAT SELLING</label>
    <summarizedField>VATACBalance__c.AmountOfSellingVATACBal__c</summarizedField>
    <summaryForeignKey>VATACBalance__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>