force-app/main/default/objects/ACBalance__c/fields/RollupAmountPaidLocalBank__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountPaidLocalBank__c</fullName>
    <label>ROLLUP AMOUNT PAID(LOCAL)-BANK</label>
    <summarizedField>BankACBal__c.AmountPaidLocalACBal__c</summarizedField>
    <summaryForeignKey>BankACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>