force-app/main/default/objects/ACBalance__c/fields/RollupAmountReceivedLocalBank__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountReceivedLocalBank__c</fullName>
    <label>ROLLUP AMOUNT RECEIVED(LOCAL)-BANK</label>
    <summarizedField>BankACBal__c.AmountReceivedLocalACBal__c</summarizedField>
    <summaryForeignKey>BankACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>