force-app/main/default/objects/ACBalance__c/fields/RollupAmountReceivedUSDBank__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountReceivedUSDBank__c</fullName>
    <label>ROLLUP AMOUNT RECEIVED(USD)-BANK</label>
    <summarizedField>BankACBal__c.AmountReceivedUSDACBal__c</summarizedField>
    <summaryForeignKey>BankACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>