force-app/main/default/objects/ACBalance__c/fields/RollUpChildACBalance__c.field-meta.xml
<CustomField>
    <fullName>RollUpChildACBalance__c</fullName>
    <label>ROLL-UP CHILD A/C BALANCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RollUpChildACBalance</valueSetName>
    </valueSet>
</CustomField>