force-app/main/default/objects/ACBalance__c/fields/RollupFMSUnpaidBuyingBalLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBuyingBalLocal__c</fullName>
    <label>ROLLUP FMS UNPAID BUYING BAL(LOCAL)</label>
    <summarizedField>FMSBillACBal__c.UnpaidBalanceOfBuyingLocalACBal__c</summarizedField>
    <summaryForeignKey>FMSBillACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>