force-app/main/default/objects/ACBalance__c/fields/RollupFMSUNpaidBuyingBalUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUNpaidBuyingBalUSD__c</fullName>
    <label>ROLLUP FMS UNPAID BUYING BAL(USD)</label>
    <summarizedField>FMSBillACBal__c.UnpaidBalanceOfBuyingUSDACBal__c</summarizedField>
    <summaryForeignKey>FMSBillACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>