force-app/main/default/objects/ACBalance__c/fields/RollupLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>RollupLoanAmount__c</fullName>
    <label>ROLLUP LOAN AMOUNT</label>
    <summarizedField>LoanACBal__c.LoanAmountACBal__c</summarizedField>
    <summaryForeignKey>LoanACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>