force-app/main/default/objects/ACBalance__c/fields/RollupOtherCostDifference__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherCostDifference__c</fullName>
    <label>ROLLUP OTHER COST DIFFERENCE</label>
    <summarizedField>OtherACBal__c.CostDiffernceACBal__c</summarizedField>
    <summaryForeignKey>OtherACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>