force-app/main/default/objects/ACBalance__c/fields/RollupOtherRevenueDifference__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherRevenueDifference__c</fullName>
    <label>ROLLUP OTHER REV DIFFERENCE</label>
    <summarizedField>OtherACBal__c.RevenueDifferenceACBal__c</summarizedField>
    <summaryForeignKey>OtherACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>