force-app/main/default/objects/ACBalance__c/fields/RollupTotalAmountOfCashOutUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountOfCashOutUSD__c</fullName>
    <label>ROLLUP ACTUAL AMOUNT OF CASH-OUT(USD)</label>
    <summarizedField>CashACBal__c.ActualAmountOfCashOutUSDACBal__c</summarizedField>
    <summaryForeignKey>CashACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>