force-app/main/default/objects/ACBalance__c/fields/RollupWMSUnpaidBuyingBalLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBuyingBalLocal__c</fullName>
    <label>ROLLUP WMS UNPAID BUYING BAL(LOCAL)</label>
    <summarizedField>WMSBillACBal__c.UnpaidBalanceOfBuyingLocalACBal__c</summarizedField>
    <summaryForeignKey>WMSBillACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>