force-app/main/default/objects/ACBalance__c/fields/RollupWMSUNpaidBuyingBalUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUNpaidBuyingBalUSD__c</fullName>
    <label>ROLLUP WMS UNPAID BUYING BAL(USD)</label>
    <summarizedField>WMSBillACBal__c.UnpaidBalanceOfBuyingUSDACBal__c</summarizedField>
    <summaryForeignKey>WMSBillACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>