force-app/main/default/objects/ACBalance__c/fields/RollupWMSUnreceivedSellBalUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnreceivedSellBalUSD__c</fullName>
    <label>ROLLUP WMS UNRECEIVED SELLING BAL(USD)</label>
    <summarizedField>WMSBillACBal__c.UnreceivedBalanceOfSellingUSDACBal__c</summarizedField>
    <summaryForeignKey>WMSBillACBal__c.ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>