force-app/main/default/objects/ACBalance__c/fields/TransactionBalanceLocalCredit__c.field-meta.xml
<CustomField>
    <fullName>TransactionBalanceLocalCredit__c</fullName>
    <label>TRANSACTION BALANCE-LOCAL CREDIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>