force-app/main/default/objects/ACBalance__c/fields/TransactionBalanceLocalDebit__c.field-meta.xml
<CustomField>
    <fullName>TransactionBalanceLocalDebit__c</fullName>
    <label>TRANSACTION BALANCE-LOCAL DEBIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>