force-app/main/default/objects/ACBalance__c/fields/TransactionBalanceUSDCredit__c.field-meta.xml
<CustomField>
    <fullName>TransactionBalanceUSDCredit__c</fullName>
    <label>TRANSACTION BALANCE-USD CREDIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>