force-app/main/default/objects/ACBalance__c/recordTypes/CashInBank.recordType-meta.xml
<RecordType>
    <fullName>CashInBank</fullName>
    <active>true</active>
    <label>Cash In Bank</label>
</RecordType>