force-app/main/default/objects/ACBalance__c/recordTypes/CashInBankUSD.recordType-meta.xml
<RecordType>
    <fullName>CashInBankUSD</fullName>
    <active>true</active>
    <label>Cash In Bank-USD Currency</label>
</RecordType>