force-app/main/default/objects/ACBalance__c/recordTypes/CashOnHand.recordType-meta.xml
<RecordType>
    <fullName>CashOnHand</fullName>
    <active>true</active>
    <label>Cash On Hand</label>
</RecordType>