force-app/main/default/objects/ACBalance__c/recordTypes/CashOnHandUSD.recordType-meta.xml
<RecordType>
    <fullName>CashOnHandUSD</fullName>
    <active>true</active>
    <label>Cash On Hand-USD Currency</label>
</RecordType>