force-app/main/default/objects/ACBalance__c/recordTypes/HSUInsurance.recordType-meta.xml
<RecordType>
    <fullName>HSUInsurance</fullName>
    <active>true</active>
    <description>Health, Social, Unemployment Insurance</description>
    <label>H/S/U Insurance</label>
</RecordType>