force-app/main/default/objects/ACBalance__c/recordTypes/PayableToEmploye.recordType-meta.xml
<RecordType>
    <fullName>PayableToEmploye</fullName>
    <active>true</active>
    <label>Payable To Employee</label>
</RecordType>