force-app/main/default/objects/ACBalance__c/recordTypes/PayableToVendor.recordType-meta.xml
<RecordType>
    <fullName>PayableToVendor</fullName>
    <active>true</active>
    <label>Payable To Vendor</label>
</RecordType>