force-app/main/default/objects/ACBalance__c/recordTypes/ReceivableFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>ReceivableFromCustomer</fullName>
    <active>true</active>
    <label>Receivable From Customer</label>
</RecordType>