force-app/main/default/objects/ACBalance__c/recordTypes/ReceivableFromEmployee.recordType-meta.xml
<RecordType>
    <fullName>ReceivableFromEmployee</fullName>
    <active>true</active>
    <label>Receivable From Employee</label>
</RecordType>