force-app/main/default/objects/ACBalance__c/recordTypes/ValueAddedTaxVAT.recordType-meta.xml
<RecordType>
    <fullName>ValueAddedTaxVAT</fullName>
    <active>true</active>
    <label>Value Added Tax (VAT)</label>
</RecordType>