force-app/main/default/objects/ACBalance__c/recordTypes/VATDeducted.recordType-meta.xml
<RecordType>
    <fullName>VATDeducted</fullName>
    <active>true</active>
    <label>VAT Deducted</label>
</RecordType>