force-app/main/default/objects/ACBalance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>BalanceType__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OpeningBalanceLocalDebit__c</columns>
    <columns>OpeningBalanceLocalCredit__c</columns>
    <columns>TransactionBalanceLocalDebit__c</columns>
    <columns>TransactionBalanceLocalCredit__c</columns>
    <columns>ClosingBalanceLocalDebit__c</columns>
    <columns>ClosingBalanceLocalCredit__c</columns>
    <columns>ParentACBalance__c</columns>
    <columns>AccountingCode__c</columns>
    <columns>ParentAccountingCodeBalance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>