force-app/main/default/objects/ACBalance__c/listViews/CashInBankLocalCurrency.listView-meta.xml
<ListView>
    <fullName>CashInBankLocalCurrency</fullName>
    <columns>NAME</columns>
    <columns>BalanceType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>BankCashAccountID__c</columns>
    <columns>BankCashAccountNumber__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>AccountingCode__c</columns>
    <columns>Currency__c</columns>
    <columns>OpeningBalanceLocalDebit__c</columns>
    <columns>OpeningBalanceLocalCredit__c</columns>
    <columns>TransactionBalanceLocalDebit__c</columns>
    <columns>TransactionBalanceLocalCredit__c</columns>
    <columns>ClosingBalanceLocalDebit__c</columns>
    <columns>ClosingBalanceLocalCredit__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ACBalance__c.CashInBank</value>
    </filters>
    <filters>
        <field>Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </filters>
    <label>CASH IN BANK-LOCAL CURRENCY</label>
    <language>en_US</language>
</ListView>