force-app/main/default/objects/ACBalance__c/listViews/PayableToEmployee.listView-meta.xml
<ListView>
    <fullName>PayableToEmployee</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>EmployeeID__c</columns>
    <columns>EmplyoeeFullName__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>AccountingCode__c</columns>
    <columns>OpeningBalanceLocalDebit__c</columns>
    <columns>OpeningBalanceLocalCredit__c</columns>
    <columns>TransactionBalanceLocalDebit__c</columns>
    <columns>TransactionBalanceLocalCredit__c</columns>
    <columns>ClosingBalanceLocalDebit__c</columns>
    <columns>ClosingBalanceLocalCredit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ACBalance__c.PayableToEmploye</value>
    </filters>
    <label>PAYABLE TO EMPLOYEE</label>
    <language>en_US</language>
</ListView>