force-app/main/default/objects/ACBalance__c/listViews/VATDeducted.listView-meta.xml
<ListView>
    <fullName>VATDeducted</fullName>
    <columns>NAME</columns>
    <columns>BalanceType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OpeningBalanceLocalDebit__c</columns>
    <columns>OpeningBalanceLocalCredit__c</columns>
    <columns>TransactionBalanceLocalDebit__c</columns>
    <columns>TransactionBalanceLocalCredit__c</columns>
    <columns>ClosingBalanceLocalDebit__c</columns>
    <columns>ClosingBalanceLocalCredit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ACBalance__c.VATDeducted</value>
    </filters>
    <label>VAT DEDUCTED</label>
    <language>en_US</language>
</ListView>